fixed nav style bleeds

--- a/Client/src/app/navigation/main-nav/main-nav.component.scss
+++ b/Client/src/app/navigation/main-nav/main-nav.component.scss
@@ -1,5 +1,13 @@
 .sidenav-container {
-  height: 100%;
+  // height: 100%;
+  // width: 100%;
+  // top: 64px;
+  // position: absolute;
+  // bottom: 0px;
+  position: absolute;
+  top: 64px;
+  left: 0;
+  right: 0;
 }
 
 .mat-spacer {
@@ -9,13 +17,13 @@
 }
 
 mat-sidenav {
+  display: flex;
   width: auto;
-  box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
+  box-shadow: 3px 0 6px (0, 0, 0, 0.24);
+  position: fixed;
+  justify-content: center;
+  align-items: center;
 }
-
-// .mat-toolbar.mat-primary {
-//   position: fixed;
-// }
 
 .mat-drawer-side {
   border: none;
@@ -27,11 +35,14 @@ mat-sidenav {
 }
 
 .active-link {
-  background-color: rgb(240, 226, 226);
+  background-color: #dcdcdc;
+  border: none;
 }
 
-.float {
-  width: auto;
+.header {
+  position: fixed;
   z-index: 9;
-  float: left;
+  top: 0;
+  left: 0;
+  right: 0;
 }
